Add missing website dependencies.

--- a/website/package.json
+++ b/website/package.json
@@ -24,6 +24,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
     "wiredep": "^4.0.0"
