--- a/website/package.json
+++ b/website/package.json
@@ -7,12 +7,14 @@
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.5.2",
+    "bower": "^1.8.2",
     "browser-sync": "^2.2.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.4.2",
+    "gulp-cli": "^1.4.0",
     "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^3.0.0",
     "gulp-htmlmin": "^3.0.0",
